name:                  haskoin-index
version:               0.4.0
synopsis:
    Implementation of a Bitcoin address indexer.
description:
    haskoin-index will download full blocks through the Bitcoin p2p network
    and build and address to transaction index using leveldb. The index can
    be queried through a ZeroMQ api. haskoin-index downloads and verifies
    headers from its peers but doesn't provide transaction verification.

homepage:              http://github.com/haskoin/haskoin
bug-reports:           http://github.com/haskoin/haskoin/issues
tested-with:           GHC==7.10.3, GHC==7.10.2, GHC==7.10.1
stability:             stable
license:               PublicDomain
license-file:          UNLICENSE
author:                Philippe Laprade, Jean-Pierre Rupp
maintainer:            plaprade+hackage@gmail.com
category:              Bitcoin, Finance, Network
build-type:            Simple
cabal-version:         >= 1.9.2
extra-source-files:    config/help, config/config.yml

source-repository head
    type:     git
    location: git://github.com/haskoin/haskoin.git

Flag library-only
    Description:   Do not build the executables
    Default:       False

library
    exposed-modules: Network.Haskoin.Index.Server
                     Network.Haskoin.Index.Server.Handlers
                     Network.Haskoin.Index.Client
                     Network.Haskoin.Index.Client.Commands
                     Network.Haskoin.Index.HeaderTree
                     Network.Haskoin.Index.Checkpoints
                     Network.Haskoin.Index.Peer
                     Network.Haskoin.Index.BlockChain
                     Network.Haskoin.Index.STM
                     Network.Haskoin.Index.Settings
                     Network.Haskoin.Index.Database

    other-modules:   Network.Haskoin.Index.HeaderTree.Types
                     Network.Haskoin.Index.HeaderTree.Model

    extensions: TemplateHaskell
                QuasiQuotes
                OverloadedStrings
                MultiParamTypeClasses
                TypeFamilies
                GADTs
                FlexibleContexts
                RecordWildCards
                GeneralizedNewtypeDeriving
                RankNTypes

    build-depends: aeson                    >= 0.7          && < 0.12
                 , aeson-pretty             >= 0.7          && < 0.8
                 , base                     >= 4.8          && < 5
                 , binary                   >= 0.7          && < 0.9
                 , bytestring               >= 0.10         && < 0.11
                 , concurrent-extra         >= 0.7          && < 0.8
                 , conduit                  >= 1.2          && < 1.3
                 , conduit-extra            >= 1.1          && < 1.2
                 , containers               >= 0.5          && < 0.6
                 , daemons                  >= 0.2          && < 0.3
                 , data-default             >= 0.5          && < 0.6
                 , deepseq                  >= 1.4          && < 1.5
                 , directory                >= 1.2          && < 1.3
                 , either                   >= 4.3          && < 4.5
                 , esqueleto                >= 2.4          && < 2.5
                 , exceptions               >= 0.8          && < 0.9
                 , file-embed               >= 0.0          && < 0.1
                 , filepath                 >= 1.4          && < 1.5
                 , haskoin-core             >= 0.3          && < 0.5
                 , leveldb-haskell          >= 0.6.4        && < 0.7
                 , lifted-async             >= 0.2          && < 0.9
                 , lifted-base              >= 0.2          && < 0.3
                 , monad-control            >= 1.0          && < 1.1
                 , monad-logger             >= 0.3          && < 0.4
                 , mtl                      >= 2.2          && < 2.3
                 , network                  >= 2.4          && < 2.7
                 , persistent               >= 2.2          && < 2.3
                 , persistent-template      >= 2.1          && < 2.2
                 , persistent-sqlite        >= 2.2          && < 2.3
                 , resourcet                >= 1.1          && < 1.2
                 , random                   >= 1.0          && < 1.2
                 , semigroups
                 , stm                      >= 2.4          && < 2.5
                 , stm-chans                >= 3.0          && < 3.1
                 , stm-conduit              >= 2.5          && < 2.8
                 , string-conversions       >= 0.4          && < 0.5
                 , text                     >= 0.11         && < 1.3
                 , time                     >= 1.4          && < 1.7
                 , unix                     >= 2.6          && < 2.8
                 , unordered-containers     >= 0.2          && < 0.3
                 , yaml                     >= 0.8          && < 0.9
                 , zeromq4-haskell          >= 0.6          && < 0.7

    ghc-options: -Wall

executable haskoin-index
    if flag(library-only)
        Buildable: False
    main-is: Main.hs
    build-depends: base, haskoin-index
    hs-source-dirs: app
    ghc-options: -Wall
                 -O3
                 -threaded
                 -rtsopts
                 -with-rtsopts=-N4

test-suite test-haskoin-index
    type:              exitcode-stdio-1.0
    main-is:           Main.hs

    extensions: EmptyDataDecls

    other-modules: Network.Haskoin.Index.Tests
                   Network.Haskoin.Index.Units

    build-depends: base                           >= 4.8        && < 5
                 , haskoin-core
                 , haskoin-index
                 , HUnit                          >= 1.2        && < 1.4
                 , QuickCheck                     >= 2.6        && < 2.9
                 , monad-logger                   >= 0.3        && < 0.4
                 , mtl                            >= 2.2        && < 2.3
                 , persistent                     >= 2.2        && < 2.3
                 , persistent-sqlite              >= 2.2        && < 2.3
                 , resourcet                      >= 1.1        && < 1.2
                 , test-framework                 >= 0.8        && < 0.9
                 , test-framework-quickcheck2     >= 0.3        && < 0.4
                 , test-framework-hunit           >= 0.3        && < 0.4

    ghc-options: -Wall
    hs-source-dirs: tests
